# inno_comicon_fall

./: .gitignore  README.md
assignments/ha1/: inputs_generator.py
gradings/labs/Timur Asapov/lang_c++/: CMakeLists.txt  demo.c  in.txt  out.txt
gradings/labs/Timur Asapov/lang_c++/src/: parcer.c  parcer.h
gradings/labs/Timur Asapov/lang_c++/tests/: test_parcer.c
gradings/labs/Timur Asapov/lang_python/: main.py  out.txt  parcer.py
gradings/labs/lab1/valeev-aidar/lang_m/: Readmi.md  (+4 more)
gradings/labs/valeev-aidar/lang_m/: Readmi.md  src.sln
gradings/labs/valeev-aidar/lang_t/: CMakeLists.txt  README.md
labs/lab1/: README.md  demo.c  in.txt  out.txt
labs/lab1/src/: parcer.c  parcer.h
labs/lab1/tests/: CMakeLists.txt  test_parcer.c
labs/lab2/: README.md
labs/lab3/: CMakeLists.txt  readme.md
labs/lab3/scripts/: README.md  demo_1.lex  demo_2.y  demo_3.tab.h  demo_3.y  demo_3u.y  demo_4.y  demo_5.y
labs/lab3/scripts_2/: README.md  demo_3.y  invalid.txt  valid.txt
labs/lab3/scripts_3/: README.md  demo_3.lex  demo_3.y  valid.txt
labs/lab4/: README.md  THEORY.md
labs/lab4/scripts/: README.md  demo.lex  demo.output  demo.tab.c  demo.tab.h  demo.y  invalid.demo  lex.yy.c
labs/lab4/scripts_2/: README.md  demo.lex  demo.tab.c  demo.tab.h  demo.y  lex.yy.c
labs/lab4/tests/: test_random.c
labs/lab5/: readme.md
labs/lab7/: README.md  build.sh  example.sh  indent_test.sh
labs/lab7/src/: demo.l  demo.output  demo.y
labs/lab7/tests/: example.py
labs/lab8/: CMakeLists.txt  README.md  test
labs/lab8/src/: chunk.h  common.h  debug.c  main.c  memory.h  value.c  value.h  vm.c
(+16 files in other folders)
